Fix hero content gap

--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,7 @@ a {
 .hero {
     display: flex;
     padding: 48px 256px;
-}
-
-.hero-content {
-    margin-right: 32px;
+    gap: 32px;
 }
 
 .hero-content p {
@@ -94,6 +91,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap:64px;
     padding-bottom: 100px;
 }
